Upgrade to GWT 2.8.1, Java 1.8 and Guava 23.0