@@ -12,11 +12,11 @@
 	<properties>
 		<!-- Synapse Web Client -->
 		<!-- GWT needs at least java 1.5 -->
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
-		<synapse.version>2017-09-29-2755-5fd5517</synapse.version>
-		<gwtVersion>2.8.0-beta1</gwtVersion>
+		<synapse.version>202.0</synapse.version>
+		<gwtVersion>2.8.1</gwtVersion>
 		<org.springframework.version>4.3.3.RELEASE</org.springframework.version>
 		<guiceVersion>3.0</guiceVersion>
 		<ginVersion>2.1.2</ginVersion>
@@ -199,14 +199,14 @@
 					<module>org.sagebionetworks.web.Portal</module>
 					<!-- GWT compiler options -->
 			        <compileReport>false</compileReport>
-			        <soycDetailed>true</soycDetailed>
+					<!-- <soycDetailed>true</soycDetailed> -->
 			        <encoding>${project.build.sourceEncoding}</encoding>
 			        <logLevel>INFO</logLevel>
 			        <sourceLevel>auto</sourceLevel>
-			        <extraJvmArgs>-Xmx2048m -Xms2048m -XX:PermSize=512m -XX:MaxPermSize=1024m</extraJvmArgs>
+			        <extraJvmArgs>-Xmx2048m -Xms2048m</extraJvmArgs>
 			        
-			        <!-- set enableClosureCompiler to false to generate source maps and compile report -->
-			        <enableClosureCompiler>true</enableClosureCompiler>
+			        <!-- set enableClosureCompiler to false to generate source maps and compile report
+			        <enableClosureCompiler>true</enableClosureCompiler> -->
 			        
 					<!--           <fragmentCount>12</fragmentCount> -->					
 				</configuration>
@@ -593,8 +593,14 @@
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>23.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
 			<artifactId>guava-gwt</artifactId>
-			<version>17.0</version>
+			<version>23.0</version>
 		</dependency>
 		
 		<!-- Prov Tree layout -->
